# dbt-ELT-pipeline

./: .gitignore  README.md  pyproject.toml
.astro/: config.yaml
dags/: dbt_dag.py
dags/dbt/data_pipeline/macros/: pricing.sql
dags/dbt/data_pipeline/models/marts/: fct_orders.sql  int_order_items.sql  int_order_items_summary.sql
dags/dbt/data_pipeline/models/staging/: stg_tpch_line_items.sql  stg_tpch_orders.sql  tpch_sources.sql
dags/dbt/data_pipeline/tests/: fct_orders_date_valid.sql  fct_orders_discount.sql
dbt-dag/: Dockerfile
dbt-dag/dags/dbt/data_pipeline/models/marts/: int_order_items.sql
dbt-dag/dags/dbt/data_pipeline/models/staging/: stg_tpch_line_items.sql
dbt-dag/dags/dbt/data_pipeline/tests/: fct_orders_discount.sql
