[tool.poetry]
name = "dbt-elt-pipeline"
version = "0.1.0"
description = ""
authors = ["Edmund Koh <21267259+edmundkwj@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dbt-snowflake = "^1.10.0"
dbt-core = "^1.10.4"
astro = "^0.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
